test/sparse/vass/sparse-mismatch-dom-err-domarr.good
sparse-mismatch-dom-err-domarr.chpl:7: error: halt reached - Sparse arrays can't be zippered with anything other than their domains and sibling arrays
